carousel responsive fix & scrollbar

--- a/src/assests/css/custom.css
+++ b/src/assests/css/custom.css
@@ -25,19 +25,34 @@
   }
   
   
-.custom-scrollbar::-webkit-scrollbar {
-  height: 4px; 
+::-webkit-scrollbar-track
+  {
+    -webkit-box-shadow: inset 0 0 4px rgba(0,0,0,0.3);
+    border-radius: 10px;
+    background-color: #F5F5F5;
+  }
+  
+::-webkit-scrollbar
+  {
+    width: 4px;
+    height: 4px;
+    background-color: #F5F5F5;
+  }
+  
+::-webkit-scrollbar-thumb
+  {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: #D62929;
+  }
+
+.react-multi-carousel-list {
+  margin: 0 auto;
+  max-width: 100%;
 }
 
-.custom-scrollbar::-webkit-scrollbar-thumb {
-  background-color: #888; 
-  border-radius: 3px; 
-}
-
-.custom-scrollbar::-webkit-scrollbar-thumb:hover {
-  background-color: #555; 
-}
-
-.custom-scrollbar::-webkit-scrollbar-track {
-  background-color: #f1f1f1; 
+.shadow-lg {
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
 }
